# DataStructureInC

./: .gitignore  CMakeLists.txt  README.md  main.c
line/list/arr/: main.c  makefile  sqlist.c  sqlist.h
line/list/linklist/double/lib1/: llist  llist.c  llist.h  main.c  makefile
line/list/linklist/simple/head/: list.c  list.h  main  main.c  makefile
line/list/linklist/simple/josephu/: jose.c
line/list/linklist/simple/nohead/: main.c  makefile  nohead.c  nohead.h
line/list/linklist/simple/polynomial/: poly.c
